test_suite5/ALAN/test_suite/alan-2022-examples/passing/000291_pair.alan
source e0 begin leave - 57500 end
