test_suite5/ALAN/test_suite/alan-2022-examples/failing/004170_mutation.alan
source x8ooa begin leave - begin 39 end
